--- a/app/views/UnauthorisedView.scala.html
+++ b/app/views/UnauthorisedView.scala.html
@@ -18,11 +18,12 @@
     layout: templates.Layout
 )
 
-@()(implicit request: Request[_], messages: Messages)
+@(taxYear: Int)(implicit request: Request[_], messages: Messages)
 
 @layout(
     pageTitle = titleNoForm(messages("unauthorised.title")),
-    timeout   = false
+    timeout   = false,
+    taxYear   = taxYear
 ) {
 
     <h1 class="govuk-heading-xl">@messages("unauthorised.heading")</h1>
