--- a/app/views/JourneyRecoveryContinueView.scala.html
+++ b/app/views/JourneyRecoveryContinueView.scala.html
@@ -19,9 +19,9 @@
     govukButton: GovukButton
 )
 
-@(continueUrl: String)(implicit request: Request[_], messages: Messages)
+@(continueUrl: String, taxYear: Int)(implicit request: Request[_], messages: Messages)
 
-@layout(pageTitle = titleNoForm(messages("journeyRecovery.continue.title"))) {
+@layout(pageTitle = titleNoForm(messages("journeyRecovery.continue.title")), taxYear = taxYear) {
 
     <h1 class="govuk-heading-xl">@messages("journeyRecovery.continue.heading")</h1>
 
