SASS-5794 Create connector to income-tax-tailor-return

--- a/app/views/auth/SignedOutView.scala.html
+++ b/app/views/auth/SignedOutView.scala.html
@@ -32,7 +32,7 @@
     <p class="govuk-body">
         @govukButton(
             ButtonViewModel(messages("site.signIn"))
-                .asLink(routes.IndexController.onPageLoad(getTaxYear()).url)
+                .asLink(routes.IndexController.onPageLoad(getTaxYear).url)
         )
     </p>
 }
