Sass 5794: Create connector to income-tax-tailor-return (#9)
* SASS-5794 Create connector to income-tax-tailor-return

* Edit action to use tax year for connectors, adjust yesNoPage templates for changes

* SASS-5794: added taxYear to views, controllers and their respective tests

* SASS-5794: Update actions for taxYear and adjusted yesNoPage scaffold to match

* SASS-5794: add mtditid to keepAlive, style corrections

* SASS-5794 Create connector to income-tax-tailor-return

* SASS-5794 Create connector to income-tax-tailor-return

* SASS-5794 Sample yesno page

---------

Co-authored-by: Kannan Ramakrishnan <12591116+kannanramakrishnan@users.noreply.github.com>

--- a/app/views/SampleYesNoPageView.scala.html
+++ b/app/views/SampleYesNoPageView.scala.html
@@ -16,21 +16,31 @@
 
 @this(
     layout: templates.Layout,
+    formHelper: FormWithCSRF,
+    govukErrorSummary: GovukErrorSummary,
+    govukRadios: GovukRadios,
     govukButton: GovukButton
 )
 
-@(continueUrl: String, taxYear: Int)(implicit request: Request[_], messages: Messages)
+@(form: Form[_], mode: Mode, taxYear: Int)(implicit request: Request[_], messages: Messages)
 
-@layout(pageTitle = titleNoForm(messages("journeyRecovery.continue.title")), taxYear = taxYear) {
+@layout(pageTitle = title(form, messages("sampleYesNoPage.title")), taxYear = taxYear) {
 
-    <h1 class="govuk-heading-xl">@messages("journeyRecovery.continue.heading")</h1>
+    @formHelper(action = routes.SampleYesNoPageController.onSubmit(mode, taxYear), Symbol("autoComplete") -> "off") {
 
-    <p class="govuk-body">@messages("journeyRecovery.continue.guidance")</p>
+        @if(form.errors.nonEmpty) {
+            @govukErrorSummary(ErrorSummaryViewModel(form))
+        }
 
-    <p class="govuk-body">
+        @govukRadios(
+            RadiosViewModel.yesNo(
+                field = form("value"),
+                legend = LegendViewModel(messages("sampleYesNoPage.heading")).asPageHeading()
+            )
+        )
+
         @govukButton(
             ButtonViewModel(messages("site.continue"))
-                .asLink(continueUrl)
         )
-    </p>
+    }
 }
