--- a/app/views/auth/SignedOutView.scala.html
+++ b/app/views/auth/SignedOutView.scala.html
@@ -15,17 +15,14 @@
  *@
 
 @this(
-    layout: templates.Layout,
+    layout: templates.UnauthenticatedLayout,
     govukButton: GovukButton
 )
 
 @()(implicit request: Request[_], messages: Messages)
 
 @layout(
-    pageTitle    = titleNoForm(messages("signedOut.title")),
-    showBackLink = false,
-    timeout      = false,
-    showSignOut  = false
+    pageTitle    = titleNoForm(messages("signedOut.title"))
 ) {
 
     <h1 class="govuk-heading-xl">@messages("signedOut.heading")</h1>
@@ -35,7 +32,7 @@
     <p class="govuk-body">
         @govukButton(
             ButtonViewModel(messages("site.signIn"))
-                .asLink(routes.IndexController.onPageLoad.url)
+                .asLink(routes.IndexController.onPageLoad(getTaxYear).url)
         )
     </p>
 }
