--- a/app/views/JourneyRecoveryStartAgainView.scala.html
+++ b/app/views/JourneyRecoveryStartAgainView.scala.html
@@ -19,9 +19,9 @@
     govukButton: GovukButton
 )
 
-@()(implicit request: Request[_], messages: Messages)
+@(taxYear: Int)(implicit request: Request[_], messages: Messages)
 
-@layout(pageTitle = titleNoForm(messages("journeyRecovery.startAgain.title"))) {
+@layout(pageTitle = titleNoForm(messages("journeyRecovery.startAgain.title")), taxYear = taxYear) {
 
     <h1 class="govuk-heading-xl">@messages("journeyRecovery.startAgain.heading")</h1>
 
@@ -30,7 +30,7 @@
     <p class="govuk-body">
         @govukButton(
             ButtonViewModel(messages("site.startAgain"))
-                .asLink(routes.IndexController.onPageLoad.url)
+                .asLink(routes.IndexController.onPageLoad(taxYear).url)
         )
     </p>
 }
