--- a/.g8/checkboxPage/app/views/$className$AgentView.scala.html
+++ b/.g8/checkboxPage/app/views/$className$AgentView.scala.html
@@ -6,11 +6,11 @@
     govukButton: GovukButton
 )
 
-@(form: Form[_], mode: Mode)(implicit request: Request[_], messages: Messages)
+@(form: Form[_], mode: Mode, taxYear: Int)(implicit request: Request[_], messages: Messages)
 
-@layout(pageTitle = title(form, messages("$className;format="decap"$.agent.title"))) {
+@layout(pageTitle = title(form, messages("$className;format="decap"$.agent.title")), taxYear = taxYear) {
 
-    @formHelper(action = routes.$className$Controller.onSubmit(mode), Symbol("autoComplete") -> "off") {
+    @formHelper(action = routes.$className$Controller.onSubmit(mode, taxYear), Symbol("autoComplete") -> "off") {
 
         @if(form.errors.nonEmpty) {
             @govukErrorSummary(ErrorSummaryViewModel(form, errorLinkOverrides = Map("value" -> "value_0")))
