SASS-5944: Create an initial version of 'Add sections to your Tax Return' page - TYR II

--- a/app/views/StartView.scala.html
+++ b/app/views/StartView.scala.html
@@ -30,7 +30,7 @@
 
     @govukButton(
         ButtonViewModel(messages("site.continue"))
-            .asLink(routes.IndexController.onPageLoad(taxYear).url)
+            .asLink(routes.AddSectionsController.onPageLoad(taxYear).url)
             .withCssClass("govuk-!-margin-top-4")
     )
 }
