--- a/app/views/components/Link.scala.html
+++ b/app/views/components/Link.scala.html
@@ -1,4 +1,4 @@
-/*
+@*
  * Copyright 2023 HM Revenue & Customs
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
@@ -12,10 +12,10 @@
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  * See the License for the specific language governing permissions and
  * limitations under the License.
- */
+ *@
 
-//package viewmodels
-//
-//abstract class WithName(name: String) {
-//  override val toString: String = name
-//}
+@this()
+
+@(href: String, id: String = "", key: String, openInNewWindow: Boolean = false)(implicit messages: Messages)
+
+<a id="@id" href="@href" @if(openInNewWindow) {target="_blank" rel="noopener noreferrer"}>@messages(key)</a>
