SASS-5944: Update sections names from strings to constants

--- a/app/views/AddSectionsAgentView.scala.html
+++ b/app/views/AddSectionsAgentView.scala.html
@@ -42,6 +42,7 @@
 
         @govukButton(
             ButtonViewModel(messages("site.continue"))
+                .asLink(routes.TaxReturnNotReadyController.onPageLoad(taxYear).url)
                 .withCssClass("govuk-button--secondary")
         )
     }
