--- a/app/views/aboutyou/FosterCarerView.scala.html
+++ b/app/views/aboutyou/FosterCarerView.scala.html
@@ -26,7 +26,11 @@
 
 @layout(pageTitle = title(form, messages("fosterCarer.title")), taxYear = taxYear) {
 
-    @formHelper(action = routes.FosterCarerController.onSubmit(mode, taxYear), Symbol("autoComplete") -> "off") {
+    @formHelper(action = controllers.aboutyou.routes.FosterCarerController.onSubmit(mode, taxYear), Symbol("autoComplete") -> "off") {
+
+        <h1 class="govuk-heading-l">@messages("fosterCarer.title")</h1>
+        <p class="govuk-body">@messages("fosterCarer.p1")</p>
+
 
         @if(form.errors.nonEmpty) {
             @govukErrorSummary(ErrorSummaryViewModel(form))
@@ -35,7 +39,7 @@
         @govukRadios(
             RadiosViewModel.yesNo(
                 field = form("value"),
-                legend = LegendViewModel(messages("fosterCarer.heading")).asPageHeading()
+                legend = LegendViewModel(messages("fosterCarer.title")).visuallyHidden()
             )
         )
 
