--- a/app/views/aboutyou/ChildBenefitAgentView.scala.html
+++ b/app/views/aboutyou/ChildBenefitAgentView.scala.html
@@ -14,6 +14,8 @@
  * limitations under the License.
  *@
 
+@import viewmodels.LegendSize
+
 @this(
     layout: templates.Layout,
     formHelper: FormWithCSRF,
@@ -26,7 +28,8 @@
 
 @layout(pageTitle = title(form, messages("childBenefit.agent.title")), taxYear = taxYear) {
 
-    @formHelper(action = routes.ChildBenefitController.onSubmit(mode, taxYear), Symbol("autoComplete") -> "off") {
+    @formHelper(action = controllers.aboutyou.routes.ChildBenefitController.onSubmit(mode, taxYear), Symbol("autoComplete") -> "off") {
+
 
         @if(form.errors.nonEmpty) {
             @govukErrorSummary(ErrorSummaryViewModel(form))
@@ -35,7 +38,7 @@
         @govukRadios(
             RadiosViewModel.yesNo(
                 field = form("value"),
-                legend = LegendViewModel(messages("childBenefit.agent.heading")).asPageHeading()
+                legend = LegendViewModel(messages("childBenefit.agent.title")).asPageHeading().withSize(LegendSize.Large).withCssClass("govuk-!-padding-bottom-5")
             )
         )
 
