--- a/app/views/components/BulletList.scala.html
+++ b/app/views/components/BulletList.scala.html
@@ -16,6 +16,12 @@
 
 @this()
 
-@(id: String, text: String, call: Call, newTab: Boolean = true, classes: String = "govuk-link govuk-link--no-visited-state")(implicit messages: Messages)
+@(elements: Seq[Html], classes: String = "govuk-list govuk-list--bullet", id: Option[String] = None)
 
-<a class="@classes" href="@call" @if(newTab) { target="_blank" rel="noopener noreferrer" } id="@id">@text@if(newTab){ @messages("site.opensInNewTab")}</a>
+<ul class="@classes" @id.map{id => id="@id"}>
+    @elements.map { element =>
+    <li class="dashed-list-item">
+        @element
+    </li>
+    }
+</ul>
