--- a/app/views/components/Heading1.scala.html
+++ b/app/views/components/Heading1.scala.html
@@ -1,4 +1,4 @@
-/*
+@*
  * Copyright 2023 HM Revenue & Customs
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
@@ -12,15 +12,17 @@
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  * See the License for the specific language governing permissions and
  * limitations under the License.
- */
+ *@
 
-package pages
+@import views.ViewUtils._
 
-import play.api.libs.json.JsPath
+@this(
+  captionHeader: CaptionHeader
+)
 
-case object MarriageAllowancePage extends QuestionPage[Boolean] {
+@(message: String, classes: String = "govuk-heading-l", caption: Option[String] = None)(implicit messages: Messages)
 
-  override def path: JsPath = JsPath \ toString
-
-  override def toString: String = "marriageAllowance"
-}
+<h1 class="@classes">
+    @caption.fold(Html(""))(captionHeader(_))
+    @message
+</h1>
