--- a/app/views/TaxReturnNotReadyAgentView.scala.html
+++ b/app/views/TaxReturnNotReadyAgentView.scala.html
@@ -22,6 +22,22 @@
 @(taxYear: Int)(implicit request: Request[_], messages: Messages)
 
 @layout(pageTitle = titleNoForm(messages("taxReturnNotReady.agent.title")), taxYear = taxYear) {
+    <h1 class="govuk-heading-l">@messages("taxReturnNotReady.agent.heading")</h1>
 
-    <h1 class="govuk-heading-xl">@messages("taxReturnNotReady.agent.heading")</h1>
+    <p class="govuk-body">@messages("taxReturnNotReady.p")</p>
+
+    <ul class="govuk-list govuk-list--bullet">
+        <li>@messages("taxReturnNotReady.agent.aboutYou")</li>
+        <li>@messages("taxReturnNotReady.incomeFromWork")</li>
+        <li>@messages("taxReturnNotReady.incomeFromProperty")</li>
+        <li>@messages("taxReturnNotReady.incomeFromGains")</li>
+        <li>@messages("taxReturnNotReady.pensions")</li>
+        <li>@messages("taxReturnNotReady.allowances")</li>
+    </ul>
+
+    @govukButton(
+        ButtonViewModel(messages("site.continue"))
+            .asLink(routes.AddSectionsController.onPageLoad(taxYear).url
+        ).withCssClass("govuk-!-margin-top-2")
+    )
 }
