--- a/app/views/aboutyou/MarriageAllowanceAgentView.scala.html
+++ b/app/views/aboutyou/MarriageAllowanceAgentView.scala.html
@@ -14,28 +14,47 @@
  * limitations under the License.
  *@
 
+@import viewmodels.LegendSize
+@import components._
+
 @this(
     layout: templates.Layout,
     formHelper: FormWithCSRF,
     govukErrorSummary: GovukErrorSummary,
     govukRadios: GovukRadios,
-    govukButton: GovukButton
+    govukButton: GovukButton,
+    heading: Heading1,
+    list: BulletList,
+    paragraph: ParagraphBody
 )
 
 @(form: Form[_], mode: Mode, taxYear: Int)(implicit request: Request[_], messages: Messages)
 
 @layout(pageTitle = title(form, messages("marriageAllowance.agent.title")), taxYear = taxYear) {
 
-    @formHelper(action = routes.MarriageAllowanceController.onSubmit(mode, taxYear), Symbol("autoComplete") -> "off") {
+    @formHelper(action = controllers.aboutyou.routes.MarriageAllowanceController.onSubmit(mode, taxYear), Symbol("autoComplete") -> "off") {
 
         @if(form.errors.nonEmpty) {
             @govukErrorSummary(ErrorSummaryViewModel(form))
         }
 
+        @heading(messages("marriageAllowance.heading"))
+
+        @paragraph(messages("marriageAllowance.agent.p1"))
+
+        @paragraph(messages("marriageAllowance.agent.p2"))
+
+        @list(elements = Seq(
+            Html(messages("marriageAllowance.agent.bullet1")),
+            Html(messages("marriageAllowance.agent.bullet2"))
+        ))
+
+        @paragraph(messages("marriageAllowance.agent.p3"))
+
         @govukRadios(
             RadiosViewModel.yesNo(
                 field = form("value"),
-                legend = LegendViewModel(messages("marriageAllowance.agent.heading")).asPageHeading()
+                legend = LegendViewModel(messages("marriageAllowance.agent.legend")).withSize(LegendSize.Medium)
             )
         )
 
