--- a/app/views/aboutyou/HighIncomeChildBenefitChargeAgentView.scala.html
+++ b/app/views/aboutyou/HighIncomeChildBenefitChargeAgentView.scala.html
@@ -14,6 +14,9 @@
  * limitations under the License.
  *@
 
+@import viewmodels.LegendSize
+
+
 @this(
     layout: templates.Layout,
     formHelper: FormWithCSRF,
@@ -26,7 +29,7 @@
 
 @layout(pageTitle = title(form, messages("highIncomeChildBenefitCharge.agent.title")), taxYear = taxYear) {
 
-    @formHelper(action = routes.HighIncomeChildBenefitChargeController.onSubmit(mode, taxYear), 'autoComplete -> "off") {
+    @formHelper(action = controllers.aboutyou.routes.HighIncomeChildBenefitChargeController.onSubmit(mode, taxYear), 'autoComplete -> "off") {
 
         @if(form.errors.nonEmpty) {
             @govukErrorSummary(ErrorSummaryViewModel(form,  errorLinkOverrides = Map("value" -> "value_0")))
@@ -35,7 +38,10 @@
         @govukRadios(
             RadiosViewModel(
                 field  = form("value"),
-                legend = LegendViewModel(messages("highIncomeChildBenefitCharge.agent.heading")).asPageHeading(),
+                legend = LegendViewModel(messages("highIncomeChildBenefitCharge.agent.heading"))
+                        .asPageHeading()
+                        .withSize(LegendSize.Large)
+                        .withCssClass("govuk-!-padding-bottom-5"),
                 items  = HighIncomeChildBenefitCharge.agentOptions
             )
         )
