--- a/app/views/aboutyou/HighIncomeChildBenefitChargeAgentView.scala.html
+++ b/app/views/aboutyou/HighIncomeChildBenefitChargeAgentView.scala.html
@@ -15,6 +15,7 @@
  *@
 
 @import viewmodels.LegendSize
+@import components._
 
 @this(
     layout: templates.Layout,
@@ -22,17 +23,22 @@
     govukErrorSummary: GovukErrorSummary,
     govukRadios: GovukRadios,
     govukDetails: GovukDetails,
-    govukButton: GovukButton
+    govukButton: GovukButton,
+    heading: Heading1,
+    list: BulletList,
+    paragraph: ParagraphBody,
 )
 
 @(form: Form[_], mode: Mode, taxYear: Int)(implicit request: Request[_], messages: Messages)
 
 @insetContent1 = {
-<p>@messages("highIncomeChildBenefitCharge.details.agent.p2")</p>
-<ul class="govuk-list govuk-list--bullet">
-    <li>@messages("highIncomeChildBenefitCharge.agent.details.bullet1")</li>
-    <li>@messages("highIncomeChildBenefitCharge.agent.details.bullet2")</li> </ul>
-<p>@messages("highIncomeChildBenefitCharge.details.agent.p3")</p>
+@paragraph(messages("highIncomeChildBenefitCharge.details.agent.p2"))
+@list(elements = Seq(
+Html(messages("highIncomeChildBenefitCharge.details.agent.bullet1")),
+Html(messages("highIncomeChildBenefitCharge.details.agent.bullet2"))
+))
+@paragraph(messages("highIncomeChildBenefitCharge.details.agent.p3"))
+
 }
 
 @layout(pageTitle = title(form, messages("highIncomeChildBenefitCharge.agent.title")), taxYear = taxYear) {
@@ -40,8 +46,8 @@
     @formHelper(action = controllers.aboutyou.routes.HighIncomeChildBenefitChargeController.onSubmit(mode, taxYear), 'autoComplete -> "off") {
 
 
-        <h1 class="govuk-heading-l">@messages("highIncomeChildBenefitCharge.title")</h1>
-        <p class="govuk-body">@messages("highIncomeChildBenefitCharge.p1")</p>
+        @heading(messages("highIncomeChildBenefitCharge.title"))
+        @paragraph(messages("highIncomeChildBenefitCharge.p1"))
 
         @if(form.errors.nonEmpty) {
             @govukErrorSummary(ErrorSummaryViewModel(form,  errorLinkOverrides = Map("value" -> "value_0")))
@@ -58,7 +64,6 @@
             RadiosViewModel(
                 field  = form("value"),
                 legend = LegendViewModel(messages("highIncomeChildBenefitCharge.agent.heading"))
-                        .asPageHeading()
                         .withSize(LegendSize.Medium),
                 items  = HighIncomeChildBenefitCharge.agentOptions
             )
