--- a/app/views/aboutyou/FosterCarerView.scala.html
+++ b/app/views/aboutyou/FosterCarerView.scala.html
@@ -14,19 +14,28 @@
  * limitations under the License.
  *@
 
+@import components._
+
+
 @this(
     layout: templates.Layout,
     formHelper: FormWithCSRF,
     govukErrorSummary: GovukErrorSummary,
     govukRadios: GovukRadios,
-    govukButton: GovukButton
+    govukButton: GovukButton,
+    heading: Heading1,
+    paragraph: ParagraphBody
 )
 
 @(form: Form[_], mode: Mode, taxYear: Int)(implicit request: Request[_], messages: Messages)
 
-@layout(pageTitle = title(form, messages("fosterCarer.agent.title")), taxYear = taxYear) {
+@layout(pageTitle = title(form, messages("fosterCarer.title")), taxYear = taxYear) {
 
-    @formHelper(action = routes.FosterCarerController.onSubmit(mode, taxYear), Symbol("autoComplete") -> "off") {
+    @formHelper(action = controllers.aboutyou.routes.FosterCarerController.onSubmit(mode, taxYear), Symbol("autoComplete") -> "off") {
+
+        @heading(messages("fosterCarer.title"))
+        @paragraph(messages("fosterCarer.p1"))
+
 
         @if(form.errors.nonEmpty) {
             @govukErrorSummary(ErrorSummaryViewModel(form))
@@ -35,7 +44,7 @@
         @govukRadios(
             RadiosViewModel.yesNo(
                 field = form("value"),
-                legend = LegendViewModel(messages("fosterCarer.agent.heading")).asPageHeading()
+                legend = LegendViewModel(messages("fosterCarer.title")).visuallyHidden()
             )
         )
 
