SASS-5694 Create Charitable donations page About you

--- a/app/views/AddSectionsView.scala.html
+++ b/app/views/AddSectionsView.scala.html
@@ -31,7 +31,7 @@
 
     @layout(pageTitle = titleNoForm(messages("addSections.title")), taxYear = taxYear) {
 
-        <span class="govuk-caption-l">@messages("site.caption", (taxYear -1).toString, taxYear.toString)</span>
+        <span class="govuk-caption-l">@messages("site.taxYearCaption", (taxYear -1).toString, taxYear.toString)</span>
 
         <h1 class="govuk-heading-l">@messages("addSections.heading")</h1>
 
