--- a/app/views/AddSectionsAgentView.scala.html
+++ b/app/views/AddSectionsAgentView.scala.html
@@ -30,7 +30,7 @@
 
     @layout(pageTitle = titleNoForm(messages("addSections.agent.title")), taxYear = taxYear) {
 
-        <span class="govuk-caption-l">@messages("site.caption", (taxYear -1).toString, taxYear.toString)</span>
+        <span class="govuk-caption-l">@messages("site.taxYearCaption", (taxYear -1).toString, taxYear.toString)</span>
 
         <h1 class="govuk-heading-l">@messages("addSections.agent.heading")</h1>
 
