--- a/app/views/aboutyou/CharitableDonationsView.scala.html
+++ b/app/views/aboutyou/CharitableDonationsView.scala.html
@@ -61,7 +61,7 @@
                 name   = "value",
                 legend = LegendViewModel(messages("charitableDonations.legend")).withSize(LegendSize.Medium),
                 items  = CharitableDonations.checkboxItems
-            ).withHint(Hint(content = Text(messages(s"charitableDonations.legend.hint"))))
+            ).withHint(Hint(content = Text(messages(s"site.hint.selectAll"))))
         )
 
         @govukButton(
